WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89887
[Qt] GraphicsSurface: Fix tile update artifacts on Mac
https://bugs.webkit.org/show_bug.cgi?id=89887
Summary
[Qt] GraphicsSurface: Fix tile update artifacts on Mac
Jocelyn Turcotte
Reported
2012-06-25 09:01:21 PDT
[Qt] GraphicsSurface: Fix tile update artifacts on Mac
Attachments
Patch
(1.95 KB, patch)
2012-06-25 09:03 PDT
,
Jocelyn Turcotte
noam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2012-06-25 09:03:36 PDT
Created
attachment 149300
[details]
Patch
Jocelyn Turcotte
Comment 2
2012-06-26 03:19:46 PDT
Committed
r121250
: <
http://trac.webkit.org/changeset/121250
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug