[Qt] GraphicsSurface: Fix tile update artifacts on Mac https://bugs.webkit.org/show_bug.cgi?id=89887

Reviewed by Noam Rosenthal.

* platform/graphics/surfaces/mac/GraphicsSurfaceMac.cpp:
(WebCore::GraphicsSurface::platformCopyToGLTexture):

Canonical link: https://commits.webkit.org/107820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121250 268f45cc-cd09-0410-ab3c-d52691b4dbfc